# ai-skill-scanner

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  cleanup.py  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: skill-security-scan.yml
scanner/: __init__.py  __main__.py  _simhook.py  main.py
scanner/ai/: __init__.py  component_scanner.py  prompt_guard.py  prompts.py  providers.py  review_triage.py  reviewer.py  triage.py
scanner/ci/: __init__.py  changed_files.py  diff_scanner.py  pr_reporter.py  target_resolver.py
scanner/config/: __init__.py  modes.py  scan_config.py
scanner/core/: __init__.py  agent_analyzer.py  alignment_analyzer.py  ast_analyzer.py  cross_skill_analyzer.py  dataflow_analyzer.py  hook_analyzer.py  lsp_analyzer.py  mcp_analyzer.py  meta_analyzer.py  plugin_parser.py  script_analyzer.py  skill_analyzer.py
scanner/reporters/: __init__.py  csv_reporter.py  graph_exporter.py  json_reporter.py  sarif_reporter.py
scanner/rules/: __init__.py  rule_loader.py  schema.yaml  sections.py
scanner/rules/yaml/: autonomy_abuse.yaml  command_injection.yaml  data_exfiltration.yaml  hook_security.yaml  manifest_validation.yaml  mcp_security.yaml  obfuscation.yaml  path_traversal.yaml  prompt_injection.yaml  resource_abuse.yaml  sensitive_data.yaml  social_engineering.yaml  supply_chain.yaml  template_injection.yaml  tool_poisoning.yaml  unicode_steganography.yaml
scanner/utils/: __init__.py  discovery.py  git_utils.py  redaction.py
viz/: index.html  package-lock.json  package.json  tailwind.config.js
viz/src/: App.tsx
viz/src/components/Graph/: edges.ts  nodes.ts
viz/src/components/Graph/edges/: SecurityEdge.tsx  (+1 more)
viz/src/components/Header/: Header.tsx
viz/src/components/LeftPanel/: LeftPanel.tsx
viz/src/components/Sidebar/: ComponentList.tsx  FilterPanel.tsx  NodeInspector.tsx  Sidebar.tsx
viz/src/components/shared/: Badge.tsx
viz/src/hooks/: usePluginData.ts  useTheme.ts
viz/src/styles/: index.css
viz/src/types/: plugin.types.ts
(+11 files in other folders)
