[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "skills-scanner"
version = "1.0.0"
description = "AI-first security scanner for Claude Code plugins and skills"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["security", "scanner", "claude", "plugins", "skills", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
ai = [
    "langchain>=0.1.0",
]
ai-openai = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
]
ai-gemini = [
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.6",
]
ai-anthropic = [
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
]
ai-bedrock = [
    "langchain>=0.1.0",
    "langchain-aws>=0.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.scripts]
skills-scanner = "scanner.main:main"

[project.urls]
Homepage = "https://github.com/your-org/skills-scanner"
Repository = "https://github.com/your-org/skills-scanner"
Issues = "https://github.com/your-org/skills-scanner/issues"

[tool.setuptools.packages.find]
include = ["scanner*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
